2012-10-24  Tristan Gingold  <gingold@adacore.com>

	* ravenscar-sparc-thread.c (ravenscar_sparc_fetch_registers):
	Add comments.

2012-10-24  Joel Brobecker  <brobecker@adacore.com>

	* ravenscar-thread.c (ravenscar_wait): Only update the list
	of threads and inferior_ptid if the inferior is still alive.

2012-10-24  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (is_known_support_routine): Use lbasename when
	matching the symtab's filename against
	known_runtime_file_name_patterns.

2012-10-24  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (ada_same_array_size_p): New function.
	(ada_promote_array_of_integrals): New function.
	(coerce_for_assign): Add handling of arrays where the elements
	are integrals of a smaller size than the size of the target
	array element type.

2012-10-24  Joel Brobecker  <brobecker@adacore.com>

	* doublest.c (convert_doublest_to_floatformat): Fix comparison
	against maximum exponent value.

2012-10-24  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.h (ADA_KNOWN_RUNTIME_FILE_NAME_PATTERNS): Add entry for
	"unwind-seh.c".

2012-10-24  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (ada_template_to_fixed_record_type_1): Do not
	strip typedef layer when computing the fixed type's field type,
	only when computing its size.

2012-10-24  Mark Kettenis  <kettenis@gnu.org>

	PR gdb/12783
	* i386-tdep.c (i386_return_value): Handle complex double and long
	double.

2012-10-24  Joel Brobecker  <brobecker@adacore.com>

	* windows-nat.c (windows_create_inferior) [!__CYGWIN__]:
	New local variable args_len.
	Quote the name of the executable when computing the command line.

2012-10-23  Mark Kettenis  <kettenis@gnu.org>

	PR gdb/12796
	PR gdb/12798
	PR gdb/12800
	* amd64-tdep.h (enum amd64_regnum): Add AMD64_ST1_REGNUM and
	AMD64_FTAG_REGNUM.
	* amd64-tdep.c (amd64_classify): Classify complex types.
	(amd64_return_value): Handle the COMPLEX_X87 class.

2012-10-23  Joel Brobecker  <brobecker@adacore.com>
